# mobula_ros1

./: README.md
bluerov2_nmpc/: CMakeLists.txt  Questions for Hakim.md  package.xml
bluerov2_nmpc/config/: defaults.config.yaml
bluerov2_nmpc/config/airframes/: bluerov2_2D.config.yaml
bluerov2_nmpc/include/: nmpc_bluerov2_2D.h  nmpc_bluerov2_2D_main.h
bluerov2_nmpc/launch/: bluerov2_nmpc.launch  bluerov2_nmpc.launch.py
bluerov2_nmpc/launch/airframes/: bluerov2_2D _backup.xml  bluerov2_2D.xml
bluerov2_nmpc/solver/: nmpc_integrator.c  nmpc_qpoases_interface.hpp  nmpc_solver.c
bluerov2_nmpc/solver/N100/: nmpc_common.h  nmpc_qpoases_interface.hpp
bluerov2_nmpc/solver/N30_0.01/: nmpc_integrator.c  nmpc_solver.c
bluerov2_nmpc/solver/backup/: nmpc_integrator.c  nmpc_qpoases_interface.cpp
bluerov2_nmpc/solver/extra_long_H/: nmpc_common.h  nmpc_integrator.c  nmpc_solver.c
bluerov2_nmpc/solver/new_long_hoirzon/: nmpc_solver.c
bluerov2_nmpc/solver/old_results_N50_t0.05/: nmpc_qpoases_interface.cpp  nmpc_solver.c
bluerov2_nmpc/solver/old_short_hoirzon/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp
bluerov2_nmpc/solver/real_time_N50/: nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
bluerov2_nmpc/src/: bluerov2_nmpc.cpp  nmpc_bluerov2_2D.cpp  nmpc_bluerov2_2D_main.cpp
bluerov2_trajectory/: package.xml  rqt_multiplot.xml
bluerov2_trajectory/cfg/: set_trajectory.cfg  set_wind_generation.cfg
bluerov2_trajectory/figure8/: asgp1.txt  df.txt  df1.txt  df11.txt  df111.txt  df_f.txt  df_f1.txt  dfn.txt  dfnew.txt  dfnews.txt  dft.txt  dft1.txt  dft10.txt  dft11.txt  dft12.txt  dft13.txt  dft14.txt  dft15.txt  dft16.txt  dft17.txt  dft18.txt  dft19.txt  dft2.txt  dft20.txt  dft21.txt  dft22.txt  dft23.txt  dft3.txt  dft4.txt  dft5.txt  dft6.txt  dft7.txt  dft8.txt  dft9.txt  dftn.txt  fastagp.txt  fsgp.txt  fsgpnn.txt  hak.txt  idealnn.txt  (+111 more)
bluerov2_trajectory/figure8_results1/: df.txt  df11.txt  l8.txt  l8n.txt  mohit_gp.txt  nogp.txt  nogpn.txt  plot_traj.py  quick_test.txt  rec_1716650786.txt  rec_1716654479.txt  rec_1716655130.txt  rec_1716656732.txt  test.txt  testdf.txt  testl1.txt  testl8.txt  testnogp.txt
bluerov2_trajectory/include/: trajectory.h
bluerov2_trajectory/launch/: test.launch
bluerov2_trajectory/scripts/: .txt  plot_traj.py  recorded_data.txt  recorded_data_agp_5.txt  recorded_data_gp.txt  recorded_data_gp_dist.txt  recorded_data_gp_dist_5.txt
bluerov2_trajectory/scripts/24-1/: recorded_data_gp_lambda_0.97.txt
bluerov2_trajectory/scripts/25-1/: lambda_0.97.txt
bluerov2_trajectory/scripts/3-2/: agp.txt  lambda_1.0.txt  mhe_3W.txt  mhe_with_horizon.txt  mhe_with_horizon_old.txt  mhe_with_horizon_old1.txt  newest.txt  recorded_data_agp.txt  recorded_data_gp_lambda_1.0.txt  recorded_data_nogp.txt
bluerov2_trajectory/scripts/5-2/: lambda07.txt  lambda1.txt  macgp.txt
bluerov2_trajectory/scripts/6-2/: lambda0.9.txt  lambda09.txt  lambda1.txt  macgp.txt  macgp_new.txt  nogp.txt  old.txt  plot_traj.py
bluerov2_trajectory/scripts/initial_tests/: recorded_data_nogp.txt  recorded_data_nogp2.txt  recorded_data_nogp_dist5-5.txt
bluerov2_trajectory/src/: recdata.cpp  trajectory.cpp  wind_generation.cpp
bluerov2_trajectory/test_recordings/: .txt  0.5.txt  0.5_wind.txt  0.5f.txt  0.5ff.txt  0.5test.txt  0.5test1.txt  0.8f.txt  0.8test.txt  0.8test1.txt  0.8test11.txt  1.0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  1_wind.txt  1f.txt  1test.txt  1test1.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  3.txt  4.txt  5.txt  6.txt  7.txt  (+132 more)
bluerov2_trajectory/test_recordings - Copy/: lambda1_sine.txt  lambda1_test.txt  mac_gp_combined_old.txt  mac_gp_sine.txt  mac_gp_sine_old.txt  mac_gp_test.txt  mac_gp_test1.txt  mac_gp_test_old.txt  plot_traj.py
bluerov2_trajectory/test_recordings - Copy/backup/: lambda_09_sine.txt
bluerov2_trajectory/test_recordings - Copy/test_gp_dense/: lambda1.txt  lambda1_combined.txt  lambda1_new.txt  lambda9_combined.txt  lambda9_new.txt  plot_traj.py
bluerov2_trajectory/test_recordings_old/: lambda09_sine_old.txt  lambda1_combined_old.txt  lambda1_sine_old.txt
disturbance_estimation/: README.md
disturbance_estimation/gp_regression/: CMakeLists.txt  package.xml
disturbance_estimation/gp_regression/include/gp_wind_regression/: data_struct.h  feature_data_model.h  gp_model.h  gp_model_base.h  gp_model_type_concatenated.h  gp_wind_regression.h  gp_wind_regression_main.h  launch_parameters.h  regression_data_model.h  utils.h
disturbance_estimation/gp_regression/launch/: common_params.xml  gp_wind_regression_combined.launch  gp_wind_regression_single.launch  gp_wind_regression_x.launch  gp_wind_regression_x1.launch  gp_wind_regression_x2.launch  gp_wind_regression_x3.launch  gp_wind_regression_y.launch  gp_wind_regression_y1.launch  gp_wind_regression_y2.launch  gp_wind_regression_y3.launch  gp_wind_regression_z.launch  gp_wind_regression_z1.launch  gp_wind_regression_z2.launch  gp_wind_regression_z3.launch
disturbance_estimation/gp_regression/src/: feature_data_model.cpp  feature_generator.cpp  gp_model.cpp  gp_model_base.cpp  gp_model_type_concatenated.cpp  gp_wind_regression.cpp  gp_wind_regression_main.cpp  regression_data_model.cpp  utils.cpp
disturbance_estimation/libgp/: CMakeLists.txt  Sources.cmake
disturbance_estimation/libgp _sparse/: README.md
disturbance_estimation/libgp _sparse - Copy - Copy/: .clang-format  .gitignore
disturbance_estimation/libgp _sparse - Copy - Copy/examples/: CMakeLists.txt
disturbance_estimation/libgp _sparse - Copy - Copy/examples/data/: Mat_data_test.txt  data_train.txt  plot_txt.m
disturbance_estimation/libgp-feature-implements_forgetting_factor_subclass_final/: CMakeLists.txt  Sources.cmake
disturbance_estimation/libgp-master/: CMakeLists.txt
disturbance_estimation/libgp_old/: CMakeLists.txt
disturbance_estimation/libgp_old/include/: cov_noise.h:Zone.Identifier
disturbance_estimation/libgp_sparse/: CMakeLists.txt
(+174 files in other folders)
