<?xml version="1.0"?>
<package format="2">
    <name>gp_wind_regression</name>
    <version>1.0.0</version>
    <description>The gp_wind_regression package</description>

    <maintainer email="mohit.mehndiratta@sensible4.fi">Mohit Mehndiratta</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
   

</package>
